--- a/AboutUs.html
+++ b/AboutUs.html
@@ -52,11 +52,11 @@
 						<div class="inner">
 							<h1>About Us</h1>
 							<span class="image main"><img src="images/mogus.png" alt="" /></span>
-							<p>Ann-Marie (Mammer): <br>
-								Say some things about you and the various things about you etc</p>
-							<p>Cody (GOAT): <br>
+							<p>Nicole: <br>
+								Some things about her and the various things about her etc</p>
+							<p>Cody: <br>
 								Some things about me and the various things about me etc</p>
-							<p>Tiffany (Tifferinicus) <br>
+							<p>Ann-Marie: <br>
 								Some things about her and the various things about her etc</p>
 						</div>
 					</div>
