--- a/Artsubject1.html
+++ b/Artsubject1.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Products for Commission</title>
+		<title>Art Subject</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -50,13 +50,11 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Products for Commission</h1>
+							<h1>Art subject 1 Available</h1>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
-							<p> Information on the art subject 1, process and cost <br>
-								Example 1 of Art subject 1: Click here to place an order (hyperlink) <br>
+							<p>Example 1 of available art: Click here to order (hyperlink) <br>
 									<img src="images/logo.png" alt="" /></p>
-							<p> Information on the Comission, process and cost <br>
-								Example 1 of commission 1: Click here to place an order (hyperlink) <br>
+							<p>Example 2 of available art: Click here to order (hyperlink) <br>
 									<img src="images/logo.png" alt="" /></p>
 						</div>
 					</div>
