--- a/ContactUs.html
+++ b/ContactUs.html
@@ -52,12 +52,12 @@
 						<div class="inner">
 							<h1>Contact Us</h1>
 							<span class="image main"><img src="images/mogus.png" alt="" /></span>
-							<p>Ann-Marie (Mammer): <br>
-								Contact mammer at @...</p>
-							<p>Cody (GOAT): <br>
+							<p>Nicole: <br>
+								Contact Nicole at @...</p>
+							<p>Cody : <br>
 								Contact cody at @... </p>
-							<p>Tiffany (Tifferinicus) <br>
-								Contact Tiffany at @... </p>
+							<p>Ann-Marie  <br>
+								Contact Ann-marie at @... </p>
 						</div>
 					</div>
 
