--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Ann Shop of Art</title>
+		<title>The Shop of Art</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -51,9 +51,9 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Welcome to Mammer's Shop of art.<br />
+								<h1>Welcome to The Shop of art.<br />
 								</h1>
-								<p>Just a large town girl living in an artful world.</p>
+								<p>Just a small town girl living in an artful world.</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
@@ -61,9 +61,9 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<a href="FinePottery.html">
-										<h2>Fine Pottery</h2>
+										<h2>Art Subject 1</h2>
 										<div class="content">
-											<p>Pottery of the fine quality.</p>
+											<p>Art subject 1 of the fine quality.</p>
 										</div>
 									</a>
 								</article>
@@ -72,9 +72,9 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Dishes Pottery</h2>
+										<h2>Art Subject 2</h2>
 										<div class="content">
-											<p>Pottery including: cups, bowls, and plates.</p>
+											<p>Art Subject 2 with more whistles.</p>
 										</div>
 									</a>
 								</article>
@@ -83,9 +83,9 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Canvas</h2>
+										<h2>Art Subject 3</h2>
 										<div class="content">
-											<p>Canvas art of various topics</p>
+											<p>Art Subject 3 (not to be confused with art subject 2)</p>
 										</div>
 									</a>
 								</article>
@@ -107,7 +107,7 @@
 									<a href="generic.html">
 										<h2>T-Shirts </h2>
 										<div class="content">
-											<p>If T-shirts are still doable this would be great</p>
+											<p>If T-shirts are doable this would be great</p>
 										</div>
 									</a>
 								</article>
@@ -116,9 +116,9 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Mammer 4</h2>
+										<h2>Art subject 4</h2>
 										<div class="content">
-											<p>Would fit best if you got another option, can always add more if neccessary.</p>
+											<p>Another option</p>
 										</div>
 									</a>
 								</article>
@@ -127,9 +127,9 @@
 										<img src="images/pic07.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Magic Mirror by Cody</h2>
+										<h2>Something by Cody</h2>
 										<div class="content">
-											<p>Gonna hi-jack a panel so i can possibly do some magic mirror work in the future</p>
+											<p>Gonna hi-jack a panel so i can possibly do something if i can</p>
 										</div>
 									</a>
 								</article>
@@ -138,9 +138,9 @@
 										<img src="images/pic08.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Standard Canvas by Tiffany</h2>
+										<h2>Another one</h2>
 										<div class="content">
-											<p>Tiffany could do some small canvas art here if you cool with it</p>
+											<p>Because another one</p>
 										</div>
 									</a>
 								</article>
@@ -229,7 +229,7 @@
 							</section>
 							<ul class="copyright">
 								<li>&copy; Untitled. All rights reserved</li><li>Template Design: <a href="http://html5up.net">HTML5 UP</a></li>
-								<li> Website by Cody, Art by Mammer </li>
+								<li> Website by Cody H </li>
 							</ul>
 						</div>
 					</footer>
