--- a/FineArt.html
+++ b/FineArt.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>About Us</title>
+		<title>Fine Art</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -40,7 +40,7 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">About Us</a></li>
+							<li><a href="AboutUs.html">About Us</a></li>
 							<li><a href="AvailArt.html">Available Art</a></li>
 							<li><a href="CommissionProducts.html">Commission Products</a></li>
 							<li><a href="ContactUs.html">Contact Us</a></li>
@@ -50,13 +50,12 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>About Us</h1>
-							<p>Nicole: <br>
-								Some things about her and the various things about her etc</p>
-							<p>Cody: <br>
-								Some things about me and the various things about me etc</p>
-							<p>Ann-Marie: <br>
-								Some things about her and the various things about her etc</p>
+							<h1>Fine Art Available</h1>
+							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
+							<p>Example 1 of available art: Click here to order (hyperlink) <br>
+									<img src="images/logo.png" alt="" /></p>
+							<p>Example 2 of available art: Click here to order (hyperlink) <br>
+									<img src="images/logo.png" alt="" /></p>
 						</div>
 					</div>
 
