--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.png" alt="" /></span><span class="title">Art by Mammer</span>
+									<span class="symbol"><img src="images/logo.png" alt="" /></span><span class="title">Art Website Mock</span>
 								</a>
 
 							<!-- Nav -->
@@ -60,7 +60,7 @@
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="FinePottery.html">
+									<a href="Artsubject1.html.html">
 										<h2>Art Subject 1</h2>
 										<div class="content">
 											<p>Art subject 1 of the fine quality.</p>
@@ -71,7 +71,7 @@
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="Artsubject2.html">
 										<h2>Art Subject 2</h2>
 										<div class="content">
 											<p>Art Subject 2 with more whistles.</p>
@@ -82,7 +82,7 @@
 									<span class="image">
 										<img src="images/pic03.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="Artsubject3.html">
 										<h2>Art Subject 3</h2>
 										<div class="content">
 											<p>Art Subject 3 (not to be confused with art subject 2)</p>
