--- a/Artsubject1.html
+++ b/Artsubject1.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Art Subject</title>
+		<title>Art Subject 1</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,7 +22,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.png" alt="" /></span><span class="title">Art by Mammer</span>
+									<span class="symbol"><img src="images/logo.png" alt="" /></span><span class="title">Art Website Mock</span>
 								</a>
 
 							<!-- Nav -->
@@ -50,7 +50,7 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Art subject 1 Available</h1>
+							<h1>Art subject 1 vailable</h1>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
 							<p>Example 1 of available art: Click here to order (hyperlink) <br>
 									<img src="images/logo.png" alt="" /></p>
