Some Template Changes

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="Artsubject1.html.html">
+									<a href="Artsubject1.html">
 										<h2>Art Subject 1</h2>
 										<div class="content">
 											<p>Art subject 1 of the fine quality.</p>
@@ -93,7 +93,7 @@
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="CommissionProducts.html">
 										<h2>Commission</h2>
 										<div class="content">
 											<p>Request art and it may be fulfilled? idk.</p>
