--- a/Artsubject1.html
+++ b/Artsubject1.html
@@ -50,7 +50,7 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Art subject 1 vailable</h1>
+							<h1>Art subject 1 available</h1>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
 							<p>Example 1 of available art: Click here to order (hyperlink) <br>
 									<img src="images/logo.png" alt="" /></p>
